# ledger

./: .gitignore  README.md
desktop/: Cargo.toml
desktop/src/: ledger.rs  main.rs
ledger/: Cargo.toml  README.md  app_nanosplus.json  nanosplus.json
ledger/src/: blake2.rs  errors.rs  main.rs  ristretto_keys.rs  schnorr.rs
