[package]
name = "legder_integration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

ledger-zondax-generic = { git = "https://github.com/Zondax/ledger-rs" }
ledger-transport = { git = "https://github.com/Zondax/ledger-rs" }
ledger-transport-hid = { git = "https://github.com/Zondax/ledger-rs" }
futures = "0.3"
tari_crypto = { git = "https://github.com/hansieodendaal/tari-crypto.git",  rev = "d6dd58b4657b2b8003ddac328eccd5b9f2597e79" }
rand = "0.8.5"
borsh = { version = "0.10", default-features = false }
digest = "0.10.6"
tari_utilities = { git = "https://github.com/tari-project/tari_utilities.git", version = "0.5", default-features = false }
lazy_static = { version = "1.3" }
