[package]
name = "legder_integration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ledger-zondax-generic = { git = "https://github.com/Zondax/ledger-rs" }
ledger-transport = { git = "https://github.com/Zondax/ledger-rs" }
ledger-transport-hid = { git = "https://github.com/Zondax/ledger-rs" }

tari_crypto = { version = "0.18" }
tari_utilities = { version = "0.5.1" }

once_cell = { version = "1.8"}
futures = "0.3"
rand = "0.8.5"
digest = "0.10.6"
borsh = { version = "0.10", default-features = false }
blake2 = { version = "0.10"}
dialoguer = { version = "0.10" }
thiserror = { version = "1.0" }
