[package]
name = "tari"
version = "0.0.1"
authors = [""]
edition = "2021"


[dependencies]
# lock to rev as soon as this is fixed: https://github.com/rust-lang/rust/issues/98666
nanos_sdk = { git = "https://github.com/LedgerHQ/ledger-nanos-sdk.git" }
nanos_ui = { git = "https://github.com/LedgerHQ/ledger-nanos-ui.git", rev = "6a7c4a3eb41ee0b09c8fd4dcc5be4f3a1f5d7b45" }

curve25519-dalek = { package = "tari-curve25519-dalek", git = "https://github.com/tari-project/curve25519-dalek", version = "4.0.3", default-features = false}
tari_crypto = { git = "https://github.com/hansieodendaal/tari-crypto.git",  rev = "d6dd58b4657b2b8003ddac328eccd5b9f2597e79", default-features = false, features = ["no_std", "borsh_ser"]}

digest = { version = "0.10", default-features = false }
rand_core = {version = "0.6", default-features = false}
embedded-alloc = "0.5.0"
borsh = { version = "0.10", default-features = false }

critical-section = { version = "1.1.1" }
[profile.release]
opt-level = 's'
lto = "fat" # same as `true`
panic = "abort"

[package.metadata.nanos]
name = "Tari"
curve = ["secp256k1", "ed25519"]
flags = "0"
icon = "key_16x16.gif"
icon_small = "key_14x14.gif"
path = ["44'/1022'","m/5261654'","m/44'"]
api_level = "1"