[package]
name = "tari_ledger_demo"
version = "0.0.1"
authors = [""]
edition = "2021"


[dependencies]
# lock to rev as soon as this is fixed: https://github.com/rust-lang/rust/issues/98666
nanos_sdk = { git = "https://github.com/LedgerHQ/ledger-nanos-sdk.git" }
nanos_ui = { git = "https://github.com/LedgerHQ/ledger-nanos-ui.git", rev = "6a7c4a3eb41ee0b09c8fd4dcc5be4f3a1f5d7b45" }
blake2 = { version = "0.10", default-features = false  }

curve25519-dalek = { package = "tari-curve25519-dalek",  version = "4.0.3", default-features = false}
tari_crypto = { git = "https://github.com/swvheerden/tari-crypto.git",  rev = "bd451c1d79a42510c38f73e24c6b24f88b5117ba", default-features = false, features = ["borsh"]}

digest = { version = "0.10", default-features = false }
rand_core = {version = "0.6", default-features = false}
embedded-alloc = "0.5.0"
borsh = { version = "0.10", default-features = false }
critical-section = { version = "1.1.1" }

[profile.release]
opt-level = 's'
lto = "fat" # same as `true`
panic = "abort"

[package.metadata.nanos]
name = "Tari Ledger Demo"
curve = ["secp256k1", "ed25519"]
flags = "0"
icon = "key_16x16.gif"
icon_small = "key_14x14.gif"
path = ["44'/1022'","m/5261654'","m/44'"]
api_level = "1"